file-upload and register api added
