# api/docs/swagger.yaml
@@ -159,7 +159,7 @@ definitions:
     type: object
   models.OKResponse:
     properties:
-      success:
+      message:
         type: string
     type: object
   models.Post:
@@ -192,6 +192,52 @@ definitions:
       likes_count:
         type: integer
     type: object
+  models.RegisterRequest:
+    properties:
+      email:
+        type: string
+      first_name:
+        maxLength: 30
+        minLength: 2
+        type: string
+      last_name:
+        maxLength: 30
+        minLength: 2
+        type: string
+      password:
+        maxLength: 16
+        minLength: 6
+        type: string
+      username:
+        maxLength: 30
+        minLength: 2
+        type: string
+    required:
+    - email
+    - first_name
+    - last_name
+    - password
+    - username
+    type: object
+  models.RegisterResponse:
+    properties:
+      access_token:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      type:
+        type: string
+      username:
+        type: string
+    type: object
   models.User:
     properties:
       created_at:
@@ -222,6 +268,32 @@ info:
   title: Swagger for blog api
   version: "1.0"
 paths:
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Register a user
+      parameters:
+      - description: Data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.RegisterResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Register a user
+      tags:
+      - auth
   /categories:
     get:
       consumes:
@@ -493,6 +565,31 @@ paths:
       summary: Update a comment
       tags:
       - comment
+  /file-upload:
+    post:
+      consumes:
+      - application/json
+      description: File upload
+      parameters:
+      - description: File
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.OKResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: File upload
+      tags:
+      - file-upload
   /likes:
     post:
       consumes:
@@ -550,6 +647,9 @@ paths:
       - application/json
       description: Get posts
       parameters:
+      - in: query
+        name: category_id
+        type: integer
       - default: 10
         in: query
         name: limit
@@ -563,6 +663,16 @@ paths:
       - in: query
         name: search
         type: string
+      - default: desc
+        enum:
+        - asc
+        - desc
+        in: query
+        name: sort_by_date
+        type: string
+      - in: query
+        name: user_id
+        type: integer
       produces:
       - application/json
       responses:
